[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/back_button.png" type="Texture" id=1]
[ext_resource path="res://content/gui/menus/NewsAppMainpage.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="NewAppMainpage" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 20
alignment = 1

[node name="News0Button" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 379.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
align = 0

[node name="News1Button" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 399.0
margin_right = 728.0
margin_bottom = 778.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
align = 0

[node name="News2Button" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 798.0
margin_right = 728.0
margin_bottom = 1177.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
align = 0

[node name="BackButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 1197.0
margin_right = 728.0
margin_bottom = 1325.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/News0Button" to="." method="_on_News0Button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/News1Button" to="." method="_on_News1Button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/News2Button" to="." method="_on_News2Button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
